# zed-http-client

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: release.yml
src/: builder.rs  claims.rs  jwt_extension.rs  lib.rs  parser.rs  verifier.rs
