[package]
name = "zed-jwt"
version = "0.1.0"
edition = "2024"
schema_version = 1
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = " A Zed extension for decoding and validating JWT tokens in buffers."
repository = "https://github.com/mjovanc/zed-jwt"

[dependencies]
zed_extension_api = "0.1.0"
