[package]
name = "zed-jwt"
version = "0.1.0"
edition = "2024"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>"]
description = " A Zed extension for decoding and validating JWT tokens in buffers."
repository = "https://github.com/mjovanc/zed-jwt"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1.0"
serde_json = "1.0"
base64 = "0.22"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
anyhow = "1.0"
rsa = "0.9"
digest = "0.10.7"
